@@ -192,10 +192,10 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkLabel" id="label-disconnection-description">
+              <widget class="GtkLabel" id="label-fps-description">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Disconnection time:</property>
+                <property name="label" translatable="yes">Upload framerate:</property>
               </widget>
               <packing>
                 <property name="top_attach">6</property>
@@ -204,23 +204,6 @@
                 <property name="y_options"></property>
                 <property name="x_padding">12</property>
                 <property name="y_padding">3</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkLabel" id="label-disconnection-time">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="xalign">0</property>
-                <property name="label">0</property>
-                <property name="selectable">True</property>
-              </widget>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="top_attach">6</property>
-                <property name="bottom_attach">7</property>
-                <property name="x_options">GTK_FILL</property>
-                <property name="y_options"></property>
               </packing>
             </child>
             <child>
@@ -243,7 +226,7 @@
               <widget class="GtkLabel" id="label6">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Encoder IP:</property>
+                <property name="label" translatable="yes">Encoder:</property>
               </widget>
               <packing>
                 <property name="top_attach">8</property>
@@ -386,6 +369,24 @@
                 <property name="y_padding">3</property>
               </packing>
             </child>
+            <child>
+              <widget class="GtkLabel" id="label-fps">
+                <property name="visible">True</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">Unknown</property>
+                <property name="selectable">True</property>
+              </widget>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="top_attach">6</property>
+                <property name="bottom_attach">7</property>
+                <property name="x_options">GTK_FILL</property>
+                <property name="y_options"></property>
+                <property name="y_padding">3</property>
+              </packing>
+            </child>
+
           </widget>
           <packing>
             <property name="position">0</property>
