@@ -1,3 +1,12 @@
+2011-08-03  Xavier Queralt  <xqueralt@flumotion.com>
+
+	reviewed by: jribas
+
+	* flumotion/component/producers/fms/admin_gtk.py:
+	* flumotion/component/producers/fms/fms.glade:
+	* flumotion/component/producers/fms/fms.py:
+	Improvements on how we display the information in the admin.
+
 2011-06-29  Xavier Queralt  <xqueralt@gmail.com>
 
 	* flumotion/component/producers/fms/fms.py:
